--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
